--- a/shower/themes/ribbon/styles/style.css
+++ b/shower/themes/ribbon/styles/style.css
@@ -15,8 +15,14 @@ h3{
 	color: #777;
 	font-weight: bold;
 }
+#Cover div ,#Picture div{
+	background: none !important;
+}
 #Cover {
 	text-shadow: 5px 5px 10px #000;
+	-moz-text-shadow: 5px 5px 10px #000;
+	-webkit-text-shadow: 5px 5px 10px #000;
+
 }
 
 #Cover h2 {
@@ -24,7 +30,7 @@ h3{
 	color:#FFF;
 	text-align:center;
 	font-size:70px;
-	}
+}
 #Cover div p {
 	margin-top:40px;
 	text-align:center;
@@ -38,9 +44,12 @@ h3{
 
 .slide {
 	background:url("../images/cover.jpg") 100% no-repeat;
-		background-size: cover;
+	background-size: cover;
 	box-shadow:10px 0px 25px 30px rgba(0, 0, 0, 0.06) inset;
-  border:1px solid #000;
+ 	border:1px solid #000;
+}
+.slide>div {
+	background-color: rgba(255,255,255,0.9);
 }
 img.logo{
 	position: absolute;
@@ -50,30 +59,44 @@ img.srm{
 	position: absolute;
 	margin: -70px 400px;
 	box-shadow: 5px 10px 20px #333;
+	-moz-box-shadow: 5px 10px 20px #333;
+	-webkit-box-shadow: 5px 10px 20px #333;
 }
 img.ER{
 	
 	box-shadow: 5px 10px 20px #333;
+	-moz-box-shadow: 5px 10px 20px #333;
+	-webkit-box-shadow: 5px 10px 20px #333;
 }
 img.seiseki{
 	box-shadow: 5px 10px 20px #333;
+	-moz-box-shadow: 5px 10px 20px #333;
+	-webkit-box-shadow: 5px 10px 20px #333;
 	position: absolute;
 	
 }
 img.seisekihyou{
 	box-shadow: 5px 10px 20px #333;
+	-moz-box-shadow: 5px 10px 20px #333;
+	-webkit-box-shadow: 5px 10px 20px #333;
 	position: absolute;
 	margin:100px 0px 0px 350px;
 }
 img.gakki{
 	box-shadow: 5px 10px 20px #333;
+	-moz-box-shadow: 5px 10px 20px #333;
+	-webkit-box-shadow: 5px 10px 20px #333;
 }
 img.register{
 	box-shadow: 5px 10px 20px #333;
+	-moz-box-shadow: 5px 10px 20px #333;
+	-webkit-box-shadow: 5px 10px 20px #333;
 	position: absolute;
 }
 img.login{
 	box-shadow: 5px 10px 20px #333;
+	-moz-box-shadow: 5px 10px 20px #333;
+	-webkit-box-shadow: 5px 10px 20px #333;
 	position: absolute;
 	margin:100px 0px 0px 350px;
 }
